...
                                <rect key="frame" x="47" y="269" width="320" height="108"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JLy-1W-8u2">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="EmailAddress"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="tvt-di-Usu"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vEG-zT-tNd">
                                        <rect key="frame" x="0.0" y="58" width="320" height="50"/>
                                        <constraints>
...
                                <rect key="frame" x="162" y="455" width="90" height="45"/>
                                <color key="backgroundColor" systemColor="linkColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginsetsection"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="90" id="3ty-ZX-c2d"/>
...
                                <rect key="frame" x="171" y="515" width="72" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Register?">
                                    <color key="titleColor" systemColor="linkColor"/>
                                </state>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hpc-Pp-xz9">
                                        <rect key="frame" x="0.0" y="60" width="384" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="phonenumberfind"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="epC-aQ-nnU"/>
...
                                    <constraint firstAttribute="height" constant="50" id="vQt-Eh-snh"/>
                                </constraints>
                                <state key="normal" title="REGISTER">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                <rect key="frame" x="0.0" y="44" width="414" height="50"/>
                                <color key="backgroundColor" systemColor="linkColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="orderfindsection"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="gzh-RE-gHF"/>
...
