...
            Auth.auth().signIn(withEmail: emailget, password: passwordget) { (Result, Error) in
                if Error != nil
                {
                    let alert = UIAlertController(title: "Invalid Authentication", message: "Invalid UserName Password", preferredStyle: .alert)
                    let ok = UIAlertAction(title: "OK", style: .default, handler: { action in
                         })
                    alert.view.accessibilityIdentifier = "loginalertview"
                    ok.accessibilityIdentifier = "okloginfalse"
                         alert.addAction(ok)
                    self.present(alert, animated: true)
                }
                else
                {
                    UserDefaults.standard.set(Result?.user.uid, forKey: "userId")
...
